[workspace]
members = ["hcctl", "healthchecks", "monitor"]

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[workspace.dependencies]
clap = { version = "4.3.12", features = ["color", "deprecated", "derive"] }
healthchecks = { path = "healthchecks", version = "^3.1.5", features = ["v3"] }
color-eyre = { version = "0.6.2", default-features = false }
uuid = { version = "1.4.0", default-features = false, features = ["v1"] }
