[workspace]
members = ["hcctl", "healthchecks", "monitor"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"

[workspace.dependencies]
clap = { version = "4.5.4", features = ["color", "deprecated", "derive"] }
healthchecks = { path = "healthchecks", version = "^3.1.7", features = ["v3"] }
color-eyre = { version = "0.6.3", default-features = false }
uuid = { version = "1.8.0", default-features = false, features = ["v1", "v4"] }
