[package]
name = "hcctl"
version = "2.0.5"
authors = ["Harsh Shandilya <me@msfjarvis.dev>", "Iain Earl <iain@itmecho.com>"]
edition = "2021"
description = "Command-line tool for interacting with a https://healthchecks.io account"
repository = "https://github.com/msfjarvis/healthchecks-rs"
homepage = "https://github.com/msfjarvis/healthchecks-rs"
license = "MIT/Apache-2.0"
keywords = ["healthchecks"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre = { version = "0.6.2", default-features = false }
comfy-table = "6.1.1"
healthchecks = { path = "../healthchecks", version = "^3.1.3" }
time = { version = "0.3.16", features = ["parsing"] }
uuid = { version = "1.2.1", default-features = false, features = [ "v1" ] }

[dev-dependencies]
time = { version = "0.3.16", features = ["parsing", "macros"] }
