[package]
name = "hcctl"
version = "2.0.8"
authors = ["Harsh Shandilya <me@msfjarvis.dev>", "Iain Earl <iain@itmecho.com>"]
edition = "2021"
description = "Command-line tool for interacting with a https://healthchecks.io account"
repository = "https://github.com/msfjarvis/healthchecks-rs"
homepage = "https://github.com/msfjarvis/healthchecks-rs"
license = "MIT/Apache-2.0"
keywords = ["healthchecks"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
color-eyre.workspace = true
comfy-table = "7.1.1"
healthchecks.workspace = true
time = { version = "0.3.36", features = ["parsing"] }
uuid.workspace = true

[dev-dependencies]
time = { version = "0.3.36", features = ["parsing", "macros"] }
