[package]
name = "healthchecks"
version = "3.1.4"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "Simple library to notify healthchecks.io from inside applications"
repository = "https://github.com/msfjarvis/healthchecks-rs"
homepage = "https://github.com/msfjarvis/healthchecks-rs"
license = "MIT/Apache-2.0"
keywords = ["healthchecks"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-*", "README.md"]
rust-version = "1.64.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = ">=1.0.2"
serde = { version = "~1.0.159", default-features = false, features = [ "derive" ] }
serde_json = "~1.0.95"
ureq = { version = "~2.6.2", features = [ "json" ] }
uuid = { version = "~1.3.1", default-features = false, features = [ "v1" ] }

[features]
v2 = []

[badges]
maintenance = { status = "actively-developed" }
