[package]
name = "healthchecks-monitor"
version = "2.0.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2018"
description = "monitor runs a given command and reports its result to https://healthchecks.io"
repository = "https://github.com/msfjarvis/healthchecks-rs"
homepage = "https://github.com/msfjarvis/healthchecks-rs"
license = "MIT/Apache-2.0"
keywords = ["healthchecks"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
clap = "3.0.0-beta.2"
healthchecks = { path = "../healthchecks", version = "^2.0.0"}
subprocess = "0.2.6"

[badges]
maintenance = { status = "actively-developed" }
