[package]
name = "healthchecks-monitor"
version = "3.0.0"
authors = ["Harsh Shandilya <me@msfjarvis.dev>"]
edition = "2021"
description = "monitor runs a given command and reports its result to https://healthchecks.io"
repository = "https://github.com/msfjarvis/healthchecks-rs"
homepage = "https://github.com/msfjarvis/healthchecks-rs"
license = "MIT/Apache-2.0"
keywords = ["healthchecks"]
readme = "README.md"
include = ["src/**/*", "../LICENSE-*", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.15", features = ["color", "derive"] }
color-eyre = { version = "0.6.1", default-features = false }
healthchecks = { path = "../healthchecks", version = "^3.0.4"}
subprocess = "0.2.8"

[badges]
maintenance = { status = "actively-developed" }
